--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <version>1.0-SNAPSHOT</version>
+        <project.version>1.0-SNAPSHOT</project.version>
     </properties>
 
     <repositories>
