--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.feinno.exapmle</groupId>
     <artifactId>service-client</artifactId>
-    <version>${version}</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>service-client</name>
