--- a/service-client/src/main/resources/application.properties
+++ b/service-client/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #服务提供者的名字
-spring.application.name=compute-service
+spring.application.name=service-client
 
 #服务提供者的端口号
 server.port=8888
 
 #服务注册中心的地址
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
