add module feign-consumer

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,6 @@
     <modules>
         <module>eureka-server</module>
         <module>service-client</module>
+        <module>feign-consumer</module>
     </modules>
 </project>
