--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -25,6 +25,14 @@
         <spring-cloud.version>Dalston.SR3</spring-cloud.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>feinno</id>
+            <name>Feinno Maven Repository</name>
+            <url>http://10.10.202.157:8081/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
