modify eureka port

--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# 注册服务的端口号
-server.port=8761
+# 注册服务的端口号 3030 3031
+server.port=3030
 # 注册服务的主机名
 eureka.instance.hostname=localhost
 # 是否需要注册到注册中心，因为该项目本身作为服务注册中心，所以为false
