--- a/ribbon-consumer/pom.xml
+++ b/ribbon-consumer/pom.xml
@@ -55,6 +55,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix</artifactId>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
