add eureka for rabbit-producer

--- a/rabbit-producer/src/main/resources/application.properties
+++ b/rabbit-producer/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=4041
 spring.application.name=rabbit-producer
+eureka.client.service-url.defaultZone=http://192.168.245.48:3030/eureka
 mq.host=op-apm-08
 mq.username=pc
 mq.password=pc
