--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
             <url>http://10.10.202.157:8081/repository/maven-public/</url>
         </repository>
     </repositories>
+
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.5.6.RELEASE</version>
+    </parent>
+
     <modules>
         <module>eureka-server</module>
         <module>service-client</module>
@@ -27,5 +35,7 @@
         <module>ribbon-consumer</module>
         <module>rabbit-producer</module>
         <module>rabbit-consumer</module>
+        <module>redis-client</module>
     </modules>
+
 </project>
