--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.application.name=ribbon-consumer
 # 3036
 server.port=3036
 eureka.instance.prefer-ip-address=true
-eureka.client.service-url.defaultZone=http://localhost:3030/eureka
+eureka.client.service-url.defaultZone=http://192.168.251.11:3030/eureka,http://192.168.251.12:3030/eureka
 
