--- a/rabbit-producer/src/main/resources/application.properties
+++ b/rabbit-producer/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=4041
 spring.application.name=rabbit-producer
-eureka.client.service-url.defaultZone=http://192.168.245.48:3030/eureka
+eureka.client.service-url.defaultZone=http://192.168.251.11:3030/eureka,http://192.168.251.12:3030/eureka
 mq.host=op-apm-08
 mq.username=pc
 mq.password=pc
