--- a/service-client/src/main/resources/application.properties
+++ b/service-client/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.application.name=service-client
 server.port=3037
 
 #服务注册中心的地址
-eureka.client.service-url.defaultZone=http://localhost:3030/eureka
+eureka.client.service-url.defaultZone=http://192.168.251.11:3030/eureka,http://192.168.251.12:3030/eureka
