--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,11 @@
         </repository>
     </repositories>
     <modules>
+        <module>kafka</module>
         <module>eureka-server</module>
         <module>service-client</module>
         <module>feign-consumer</module>
         <module>ribbon-consumer</module>
+        <module>kafkaconsumer</module>
     </modules>
 </project>
