springclud feign kafka demo

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     </parent>
 
     <modules>
+        <module>eureka-server</module>
         <module>kafka</module>
         <module>feign-consumer</module>
         <module>kafkaconsumer</module>
