--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -21,11 +21,12 @@ kafka.producer.retries=0
 kafka.producer.batch.size=4096
 kafka.producer.linger=1
 kafka.producer.buffer.memory=40960
-#服务提供者的名字
+#The name of the service provider.
 spring.application.name=service-kafka
 
-#服务提供者的端口号
+#The port number of the service provider.
 server.port=4037
 
-#服务注册中心的地址
-eureka.client.service-url.defaultZone=http://192.168.251.11:3030/eureka,http://192.168.251.12:3030/eureka
+#Address of the service registry.
+#eureka.client.service-url.defaultZone=http://192.168.251.11:3030/eureka,http://192.168.251.12:3030/eureka
+eureka.client.service-url.defaultZone=http://localhost:3030/eureka
